Fixed some errors, adjusted model
