# src/middlewares/validation.js
@@ -1,5 +1,5 @@
 const { body } = require('express-validator')
-
+const _ = require('lodash')
 const validateRegistrationBody = () => {
   return [
     body('name')
@@ -16,7 +16,25 @@ const validateRegistrationBody = () => {
       .exists()
       .withMessage('password field is required')
       .isLength({ min: 8 })
-      .withMessage('password must be greater then 8 letters')
+      .withMessage('password must be greater then 8 letters'),
+    body('telefone')
+      .isArray()
+      .withMessage('Telefones must be an array of objects')
+      .custom(arr => {
+        return arr.every((element) => {
+          // element is each element in the array
+          return _.has(element, 'ddd') && _.has(element, 'numero')
+        })
+      })
+      .withMessage('Object in telefone must have ddd and numero')
+      .custom(arr => {
+        return arr.every((element) => {
+          // element is each element in the array
+          if (((typeof element.ddd === 'string') && (element.ddd.length === 3)) && ((typeof element.numero === 'string') && ((element.numero.length === 9) || (element.numero.length === 8)))) return true
+          else return false
+        })
+      })
+      .withMessage('Problems with phone number')
   ]
 }
 
